dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp
    spec:
			imagePullSecrets:
			  - name: mydoker
      containers:
      - image: mohitsaluja/myapp:v1
        name: myapp
        resources: {}
