pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: myapp
  name: myapp
spec:
  containers:
  - image: mohitsaluja/myapp:v1
    name: myapp
  dnsPolicy: ClusterFirst
  restartPolicy: Always
