ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: myapp
spec:
  ingressClassName: nginx 
  rules:
  - host: app.cloudmesh.tech
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8020
        path: /
        pathType: Prefix 
status:
  loadBalancer: {}
